[project]
name = "stock-analysis-plus"
version = "0.1.0"
description = "Public-safe stock analysis workflow kit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[project.scripts]
stock-analysis-plus = "stock_analysis_plus.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
